--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -1,7 +1,16 @@
+
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+}
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
+  background-color: #fff;
 }
 
 #container {
@@ -10,4 +19,19 @@ html, body {
 
 .map {
   height: 100%;
+}
+
+.status {
+  text-align: center;
+  position: relative;
+  top: 8px;
+}
+
+.status span {
+  padding: 2px 10px;
+  font-weight: 500;
+  background-color: #f9edbe;
+  border: 1px solid #f0c36d;
+  border-radius: 2px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
