--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,8 +3,28 @@ html, body {
   margin: 0;
   padding: 0; }
 
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857;
+  color: #333;
+  background-color: #fff; }
+
 #container {
   height: 100%; }
 
 .map {
   height: 100%; }
+
+.status {
+  text-align: center;
+  position: relative;
+  top: 8px; }
+
+.status span {
+  padding: 2px 10px;
+  font-weight: 500;
+  background-color: #f9edbe;
+  border: 1px solid #f0c36d;
+  border-radius: 2px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); }
