--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,9 @@ body {
   font-size: 14px;
   line-height: 1.42857;
   color: #333;
-  background-color: #fff; }
+  background-color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
 
 #container {
   height: 100%; }
@@ -22,8 +24,7 @@ body {
   top: 8px; }
 
 .status span {
-  padding: 2px 10px;
-  font-weight: 500;
+  padding: 4px 14px;
   background-color: #f9edbe;
   border: 1px solid #f0c36d;
   border-radius: 2px;
