--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -1,22 +1,21 @@
 // TODO: bootstrap button group for type, options, current charge, passengers, speed
 // TODO: use real-time weather
 // TODO:
-
-@import 'normalize';
+@import "normalize";
 
 html, body {
   height: 100%;
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Proxima Nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
+  -webkit-font-smoothing: antialiased;
   line-height: 1.42857143;
   color: #333;
   background-color: #fff;
-  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale
 }
 
@@ -35,7 +34,7 @@ button {
 
   &:hover,
   &:focus {
-    color: #FFF;
+    color: #fff;
     text-decoration: none;
   }
 
@@ -43,20 +42,20 @@ button {
   &.active {
     outline: 0;
     background-image: none;
-    box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   }
 }
 
-.status {
-  text-align: center;
+.notification {
   position: relative;
   top: 8px;
+  text-align: center;
 }
 
-.status span {
-  font-weight: bold;
-  font-size: 13px;
+.notification span {
   padding: 4px 14px;
+  font-size: 13px;
+  font-weight: bold;
   background-color: #f9edbe;
   border: 1px solid #f0c36d;
   border-radius: 2px;
@@ -65,24 +64,21 @@ button {
 
 .directions-overlay {
   position: absolute;
-  z-index: 1;
   top: 15px;
   left: 50px;
-  padding-right: 36px;
-  padding-bottom: 29px;
+  z-index: 1;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3), 0 4px 15px -5px transparent;
 }
 
 .directions-overlay input {
   display: block;
+  min-width: 285px;
+  padding: 3px 10px 3px 35px;
   font-size: 14px;
   line-height: 30px;
-  padding: 3px 10px;
-  padding-left: 35px;
-  outline: 0;
-  min-width: 285px;
-  border: 0;
   background-color: #fff;
+  border: 0;
+  outline: 0;
 }
 
 .directions-overlay input:focus ~ i {
@@ -97,43 +93,55 @@ button {
 }
 
 .directions-overlay .route {
-  cursor: pointer;
   position: absolute;
-  right: 0;
-  font-size: 22px;
   top: 0;
-  color: #fff;
-  border: 0;
-  background-color: #4e8ef7;
-  padding: 0 10px;
+  right: 0;
   height: 72px;
+  padding: 0 10px;
+  font-size: 22px;
   line-height: 72px;
-  outline: none;
-}
-
-.directions-overlay .get-directions {
-  background: lightgray;
-  font-weight: bold;
-  font-size: 12px;
-  position: absolute;
-  text-align: center;
-  width: 366px;
-  padding: 5px 10px;
+  color: #fff;
   cursor: pointer;
-  border: 1px solid transparent;
+  background-color: #4e8ef7;
+  border: 0;
   outline: none;
 }
 
+.directions-overlay .button-group button {
+  padding: 4px 8px;
+  font-weight: 600;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.1);
+  transition: all 0.2s cubic-bezier(0.52, 0, 0.48, 1);
+
+}
+
+.directions-overlay .model:hover {
+  background-color: rgba(204, 0, 0, 0.7);
+}
+
+.directions-overlay .configuration:hover {
+  background-color: rgba(51, 51, 51, 0.7);
+}
+
+.directions-overlay .charge:hover {
+  background-color: rgba(46, 204, 64, 0.7);
+
+}
+
+.directions-overlay .options:hover {
+  background-color: rgba(72, 61, 139, 0.7);
+}
 
 .directions-overlay hr {
   position: absolute;
+  left: 35px;
   width: 285px;
   height: 1px;
-  border: 0;
-  left: 35px;
   padding-left: 10px;
-  background-color: rgba(0, 0, 0, 0.1);
   margin: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+  border: 0;
 }
 
 nav {
@@ -144,8 +152,8 @@ nav {
 }
 
 nav ul {
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 nav ul li {
@@ -153,10 +161,10 @@ nav ul li {
 }
 
 nav a {
-  text-decoration: none;
   padding: 0 10px;
   font-size: 13px;
-  color: #fff;
   font-weight: bold;
-  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
+  color: #fff;
+  text-decoration: none;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.6);
 }
