Added 5px margin right to ion icons in button group

--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -116,6 +116,10 @@ button {
 
 }
 
+.directions-overlay .button-group [class^="ion-"] {
+  margin-right: 5px;
+}
+
 .directions-overlay .model:hover {
   background-color: rgba(204, 0, 0, 0.7);
 }
